<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">bright</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="skip">SKIP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="submit">Submit</string>
    <string name="certify_age">I Cerify I am above 13 years of age</string>
    <string name="register_message">Register</string>
    <string name="error">Errorr</string>
    <string name="login_message">Login</string>
</resources>
