<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/register_message"
            android:id="@+id/register_message" android:layout_gravity="center"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/register_name"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/register_email"/>

    <EditText
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/register_password"/>

    <EditText
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:id="@+id/register_password_confirm"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certify_age"
            android:id="@+id/register_certify_age" android:layout_gravity="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submitRegister"
            android:id="@+id/register_button" android:layout_gravity="center"/>


</LinearLayout>