<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_message"
            android:id="@+id/login_message" android:layout_gravity="center"/>


    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/login_email" android:inputType="textEmailAddress"/>

    <EditText
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/login_password"/>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submitLogin"
            android:id="@+id/login_button" android:layout_gravity="center"/>


</LinearLayout>