<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/sign_up_background">

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
               android:src="@drawable/sign_up"/>


    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:padding="10dp"
               android:layout_weight="1"
               android:onClick="signInFacebook"
               android:src="@drawable/sign_up_facebook"/>


    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:padding="10dp"
               android:onClick="signInTwitter"
               android:src="@drawable/sign_up_twitter"/>

    <TextView 
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:textStyle="bold"
              android:textSize="20sp"
              android:gravity="center"
              android:text="@string/sign_up_with_email"
              android:onClick="registerMobifusion"
              android:clickable="true"
              android:layout_weight="1"/>

    <TextView
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:textStyle="normal"
              android:textSize="20sp"
              android:gravity="center"
              android:text="@string/already_have_an_account"

              android:layout_weight="1"/>


    <TextView 
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:textStyle="bold"
              android:textSize="20sp"
              android:gravity="center"
              android:text="@string/sign_in_here"
              android:onClick="signInMobifusion"
              android:clickable="true"
              android:layout_weight="1"/>


    <TextView 
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:textStyle="normal"
              android:textSize="20sp"
              android:gravity="center"
              android:text="@string/skip"
              android:onClick="skipSignUp"
              android:clickable="true"
              android:layout_weight="1"/>


</LinearLayout>